--- a/Src/ParagonLP.css
+++ b/Src/ParagonLP.css
@@ -1,10 +1,11 @@
 
 .nav-link
 {
+    padding-left: 20px;
     color:white;
 }
 .navbar-brand.Logo
 {
-    transform: scale(2.25);
-    padding: 20px;
+    transform: scale(1.5);
+    padding-left: 20px;
 }
