--- a/Src/ParagonLP.css
+++ b/Src/ParagonLP.css
@@ -1,26 +1,282 @@
-.nav-link
-{
-    padding-left: 20px;
-    color:white;
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    scroll-behavior: smooth;
 }
-.navbar-brand.Logo
-{
-    transform: scale(1.5);
-    padding-left: 20px;
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #F7DBA7;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
-/* Style for the section with a combined gradient and image background */
-/*.gradient-image-background {
-    height: 100vh; /* Full viewport height 
-    background: linear-gradient(
-        150deg,
+
+.navbar {
+    background-color: black;
+}
+
+.navbar-nav {
+    margin-left: 80px; 
+}
+
+.navbar-nav .nav-link {
+    color: white;
+    padding: 10px 15px; 
+    margin-right: 35px;
+    font-size: 16px; 
+    text-transform: uppercase; 
+    text-decoration: none;
+    border: none; 
+    outline: none; 
+    box-shadow: none; 
+}
+
+.navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus, .navbar-nav .nav-link:active {
+    background-color: transparent; 
+    color: #ff6f0e; 
+    border: none; 
+    box-shadow: none;
+}
+
+.navbar-toggler {
+    border: none; 
+}
+
+.TEbutton {
+    display: flex;
+    position: relative;
+}
+
+.TEbutton a {
+    background-color: #ff6f0e;
+    color: white;
+    padding: 20px 40px;
+    max-width: 100%;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 45px;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: none;
+    margin-top: 350px;
+    margin-left: 80px;
+}
+
+.TEbutton a:hover {
+    background-color: #ff6f0e; 
+    color: black; 
+    border: none; 
+    box-shadow: none;  
+}
+
+section {
+    margin-bottom: 150px;
+}
+
+
+/*FIRST SECTION*/
+.first {
+    position: relative;
+    height: 700px;
+    border-radius: 0 0 60px 60px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
+    z-index: 0;
+}
+
+.carousel {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.carousel-inner {
+    height: 100%; 
+    overflow: hidden; 
+}
+
+.carousel-item {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+}
+
+.carousel-item.active {
+    opacity: 1;
+}
+
+.carousel-item-next,
+.carousel-item-prev {
+    opacity: 0; 
+}
+
+.first::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(150deg,
+        rgb(255, 128, 1,.5), 
+        rgba(255, 172, 112, 0.5) 15%, 
+        rgba(255, 201, 137, .6) 20%,
+        rgb(248, 135, 22,.5) 15%, 
+        rgba(255, 255, 255, 0.1) 10%, 
+        rgba(255, 255, 255, 0.1) 10% 
+    );
+    z-index:1; 
+    pointer-events: none;
+}
+
+.first::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at 70% center, rgba(255, 255, 255, 0.6), rgba(242, 140, 42, 0.8) 80%);
+    z-index: 2;
+    pointer-events: none;
+}
+
+.image-container{
+    position: absolute;
+    display: flex;
+}
+
+.image-container img{
+    height: 120px;
+    margin-top: 50px;
+    margin-left: 90px;
+}
+
+.inner-first{
+    font-family: Arial, sans-serif;
+}
+
+.inner-first h1,p{
+    position: absolute;
+    display: flex;
+    margin-top: 180px;
+    margin-left: 100px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 68px;
+}
+
+.inner-first p{
+    position: absolute;
+    display: flex;
+    margin-top: 260px;
+    margin-left: 110px;
+    font-size: 14px;
+    width: 450px;
+}
+
+/*SECOND SECTION*/
+.second {
+    background: linear-gradient(150deg,
         rgba(242, 140, 40, 100), 
         rgba(255, 172, 112, 100),
-        rgba(255,201,137,100),
-        rgba(255,155,53,100),
-        rgba(255,255,255,100)
-    )
-  
-}**/
-.carousel-fade .carousel-item {
-    transition: opacity 1.5s ease-in-out;
-  }
+        rgba(255, 201, 137, 100),
+        rgba(255, 155, 53, 100),
+        rgba(255, 255, 255, 100)
+    );
+    height: 700px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/*INNER FIRST SECTION*/
+.inner-first {
+    position: relative; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4; 
+    display: flex;
+    justify-content: left; 
+    align-items: left; 
+    padding: 20px; 
+    box-sizing: border-box;
+}
+
+.Fbutton {
+    display: inline-block; 
+    position: relative;
+    margin-left: 90px;
+    margin-top: 20px;
+}
+
+.Fbutton a {
+    background-color: transparent;
+    color: #1B1B1B;
+    padding: 15px 45px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 45px;
+    border: 2px solid rgba(27, 27, 27, 0.5); 
+    margin: 0 10px; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+}
+
+.Fbutton a:hover {
+    background-color: transparent;
+    color: #ff6f0e;
+    transform: scale(1.1); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    border-color: rgba(27, 27, 27, 1); 
+}
+
+.Sbutton {
+    display: inline-block; 
+    position: relative; 
+    margin-top: 350px;
+    margin-left: 20px;
+}
+
+.Sbutton a {
+    background-color: #1B1B1B;
+    color: white;
+    padding: 15px 45px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 45px;
+    border: none;
+    margin: 0 20px; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.Sbutton a:hover {
+    background-color: #1B1B1B;
+    color: #ff6f0e; 
+    transform: scale(1.1); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
+}
+
+.btn i {
+    margin-left: 10px; 
+    font-size: 16px; 
+}
+
+.btn:hover {
+    color: #ff6f0e;
+    transform: scale(1.1); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    border-color: rgba(27, 27, 27, 1); 
+}
+
