--- a/Src/ParagonLP.css
+++ b/Src/ParagonLP.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #F7DBA7;
+    background-color: white;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -81,11 +81,12 @@ section {
 /*FIRST SECTION*/
 .first {
     position: relative;
-    height: 700px;
+    resize: both;
     border-radius: 0 0 60px 60px;
-    overflow: hidden;
+    overflow: auto;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
     z-index: 0;
+ 
 }
 
 .carousel {
@@ -101,20 +102,23 @@ section {
 .carousel-inner {
     height: 100%; 
     overflow: hidden; 
+    object-fit: fill;
 }
 
 .carousel-item {
+    object-fit: fill;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    opacity: 0;
+    opacity: 0%;
     transition: opacity 2s ease-in-out;
+
 }
 
 .carousel-item.active {
-    opacity: 1;
+    opacity: 0;
 }
 
 .carousel-item-next,
@@ -123,6 +127,7 @@ section {
 }
 
 .first::before {
+    
     content: "";
     position: absolute;
     top: 0;
@@ -135,7 +140,7 @@ section {
         rgba(255, 201, 137, .6) 20%,
         rgb(248, 135, 22,.5) 15%, 
         rgba(255, 255, 255, 0.1) 10%, 
-        rgba(255, 255, 255, 0.1) 10% 
+        rgba(255, 255, 255, 0.1) 10%
     );
     z-index:1; 
     pointer-events: none;
@@ -212,7 +217,8 @@ section {
     justify-content: left; 
     align-items: left; 
     padding: 20px; 
-    box-sizing: border-box;
+    box-sizing: border-box; 
+
 }
 
 .Fbutton {
